ADTS-33 Z-Index fix

--- a/client/src/components/QueryComponent/QueryComponent.scss
+++ b/client/src/components/QueryComponent/QueryComponent.scss
@@ -275,7 +275,7 @@
 
 .ms-TextField.qc-query
 .ms-TextField-wrapper {
-  z-index: 2;
+  z-index: 101;
   position: fixed;
   margin-top: -38px;
   margin-left: 225px;
